# AI-Powered-CV_Analysis

./: .gitignore  README.md
Backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
Backend/app/: __init__.py  config.py  dependencies.py  main.py
Backend/app/api/: router.py
Backend/app/core/: constants.py  cookies.py  exceptions.py  force_ipv4.py  logging.py  middleware.py  security.py
Backend/app/integrations/: __init__.py  av_scanner.py  supabase_client.py
Backend/app/models/: __init__.py  analysis.py  audit.py  base.py  feedback.py  job.py  resume.py  resume_embedding.py  user.py
Backend/app/pipeline/: orchestrator.py
Backend/app/repositories/: __init__.py  analysis_repo.py  audit_repo.py  base.py  job_repo.py  resume_repo.py  user_repo.py
Backend/app/schemas/: __init__.py  analysis.py  auth.py  common.py  feedback.py  job.py  resume.py  user.py
Backend/app/services/: __init__.py  analysis_service.py  audit_service.py  auth_service.py  feedback_service.py  job_service.py  notification_service.py  resume_service.py  storage_service.py  user_service.py
Backend/app/utils/: crypto_utils.py  date_utils.py  file_utils.py  retry.py  text_utils.py
Backend/app/workers/: __init__.py  beat_schedule.py  celery_app.py  utils.py
Backend/infra/: docker-compose.test.yml  docker-compose.yml
Backend/infra/nginx/: nginx.conf
Backend/migrations/: env.py
Backend/migrations/versions/: 0001_initial_schema.py  (+2 more)
Backend/scripts/: seed_data.py
Backend/tests/: conftest.py
(+122 files in other folders)
